--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -5,11 +5,11 @@
 \usepackage{polyglossia}
 \usepackage[breaklinks=true,hidelinks]{hyperref}
 \usepackage{tikz}
-\usepackage[backend=biber,style=apa,url=true]{biblatex}
+\usepackage[citestyle=authoryear,bibstyle=nccph,backend=biber,url=true]{biblatex}
 \addbibresource{bibliography.bib}
 %
-\title{\huge \textbf{COPLAS SOBRE LA MVERTE DE SV PADRE}}
-\author{\huge\textsc{Jorge Manriqve}}
+\title{\huge\textbf{COPLAS SOBRE LA MVERTE DE SV PADRE}}
+\author{\huge\textsc{\textbf{Jorge Manriqve}}}
 \date{\vspace{60pt} \textsc{Edición crítica liminar}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
 \setmainfont{TemporaNR}[RawFeature=onum]
@@ -109,15 +109,15 @@ las adoptó de Dutton y su trabajo \emph{El cancionero del s. XV (ca. 1360-1520)
 %
 {\eg} = \emph{Cancionero de Egerton} (British Library, Eg. 939).
 %
-Manuscrito en papel con marcas de agua de fines de los 1470 o inicios de los 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \emph{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>\par
+Manuscrito en papel con marcas de agua de fines de los 1470 o inicios de los 1480; 19x14,5cm.; escritura gótica cortesana, copista castellano; copia de un genuino llevado a cabo en la corte de Navarra; contiene textos poéticos y epistolares; 3 guardas [2 al inicio y 1 de cierre] y 122 fols.; los ff. 15r--18v contienen las coplas con la rúbrica \comillas{¶Coplas que fiço don jorje manrriq\emph{ue} sobre la muerte del maestre de santiago don rrodrigo manrriq\emph{ue} su padre}; la copla XL estuvo incompleta, pero otra redacción la completó en los pasajes restantes con una escritura gótica descuidada, escrita en los espacios restantes del f. 18v, porque el fol. central [primitivo f. 19v] no se conservó: tras aquel debía continuar el texto del \emph{Infante Epitus} \textcite{Beltrán2011}; \comillas{cancionero pro-Isabelino} \parencite{Severin2000}. <\url{https://www.cervantesvirtual.com/nd/ark:/59851/bmcj1034}>.\par
 
 {\jm} = \emph{Vita Christi por fray Íñigo de Mendoza} (RBME, 100-II-17).
 %
-Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r--44v contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\emph{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \emph{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>\par
+Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41r--44v contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\emph{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \emph{editio princeps}. <\url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}>.\par
 
 {\rl} = \emph{Cancionero de Ramón de Llavia} (BNE, INC/2567).
 %
-Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r--76r contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\emph{n} por ramon dellabia en q\emph{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>\par
+Impresión a doble columna; tipografía gótica; Zaragoza, Pablo Hurus, ca. 1488-1490?; 98 fols.; los ff. 73r--76r contienen las coplas con la rúbrica \comillas{De don jorge manrrique por la muerte de su padre}; dos ejemplares en la Biblioteca Nacional de España con las siglas INC/2567 y INC/2892; dedicado a doña Francisquina de Bardací, según el prólogo \comillas{fecho a la señora doña francisqujna de bardaçi mujer del magnifico señor mofsen(?) joan fernandez de heredia gouernador de arago\emph{n} por ramon dellabia en q\emph{ue} le endereça el presente libro}. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000108057&page=1}>.\par
 
 {\hh} = \emph{Cancionero de Oñate-Castañeda} (Harvard Houghton Library, MS. Span. 97).
 %
@@ -125,18 +125,18 @@ Manuscrito en papel; 28x20,6cm.; escritura gótica del s. XV con rasgos de corte
 
 {\mn} = \emph{Cancionero de Pero Guillén de Segovia} (BNE, MS/4114).
 %
-Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de fines del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r--418v contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>\par
+Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de fines del s. XV (Pérez Priego, 2017; Beltrán, 1991); 6 guardas [3 al inicio y 3 de cierre] y 731 fols.; los ff. 407r--418v contienen las coplas X-XL [acéfalo]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000134993&page=1}>.\par
 
 {\im} = \emph{Cancionero de fray Íñigo de Mendoza} (BNE, INC/897).
 %
-Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r--70r contienen las coplas con la rúbrica \comillas{Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>\par
+Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67r--70r contienen las coplas con la rúbrica \comillas{Coplas que hizo do\emph{n} jorge manrriq\emph{ue} ala muerte del maestre de santiago do\emph{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. <\url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}>.\par
 \relax
 \vfill
 
 \section*{\centering \textsc{Criterios de edición}}
 \addcontentsline{toc}{subsection}{\textsc{Criterios de edición}}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{\textbf{X}} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo anteriormente indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \emph{α} del \emph{stemma codicum} construido por el segundo. Descartando el subarquetipo \emph{β}, siendo {\im} su testimonio más representativo\footnoteE{Aunque el subarquetipo \emph{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \emph{\textbf{X}} --esto es, \emph{EM6} y \emph{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente {\im} por ser el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013}.}, la filiación de los testimonios se resumiría con el siguiente \emph{stemma} reducido a partir de lo indicado\footnoteE{Para el \emph{stemma} completo \emph{cfr.} \textcite[103]{PérezPriego2017}.}:\par
 
 	\begin{figure}[ht]
 		\centering
@@ -190,7 +190,7 @@ Criterios de presentación gráfica\footnoteE{Las modificaciones no aplican al a
 %
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en {\eg}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de {\hh} o de algún testimonio impreso.\par
 %
-El orden de las coplas que se sigue es el de {\eg} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y \parencite{Foulché-Delbosc1902}, descartando el orden de {\jm}.\par
+El orden de las coplas que se sigue es el de {\eg} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y \parencite{Foulché-Delbosc1902}.\par
 %
 Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y las explicaciones adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{\char"02016}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteE{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Se eludirán variantes gráficas y de espacio. Las explicaciones contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base y plausibles interpretaciones.\par
 \relax
@@ -206,7 +206,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \newpage
 
 \section*{\centering \textsc{Conspectvs siglorvm}}
-\addcontentsline{toc}{section}{\textsc{Conspectvs siglorvm}}
+\addcontentsline{toc}{section}{\textsc{Conspectus siglorum}}
 
 \subsection*{\centering\normalsize \textsc{Sigla testimoniorvm}}
 \addcontentsline{toc}{subsection}{\textsc{Sigla testimoniorvm}}
