--- a/Coplas-Manrique-LaTeX.tex
+++ b/Coplas-Manrique-LaTeX.tex
@@ -79,7 +79,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-Edición y composición en LuaLaTeX con el paquete\\ Reledmac de \textsc{Maïaeul Rouquette} por \textsc{Ioannes Bracledius}.
+Edición y composición en LuaLaTeX con el paquete Reledmac\\ de \textsc{Maïaeul Rouquette} por \textsc{Juan J. Bracamonte Ledesma}.
 \end{flushright}
 \newpage
 %
