--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,62 +1,284 @@
-@book{Alonso1963,
-	author    = {D. Alonso},
-	title     = {Luis de Góngora, Obras en verso del Homero español que recogió Juan López de Vicuña},
-	year      = {1963},
-	publisher = {Consejo Superior de Investigaciones Científicas (CSIC)}
+@book{Alfonso1807,
+    author    = {{Real Academia de la Historia}}, 
+    title     = {Las siete partidas del Rey Don Alfonso el Sabio},
+    volume    = {II},
+    year      = {1807},
+    publisher = {Imprenta Real},
+    url       = {https://www.cervantesvirtual.com/nd/ark:/59851/bmcf1903},
+    rauthor   = {Alfonso el Sabio},
+    role      = {Au.},
+    sigla     = {RAH}
 }
 %
-@book{Alonso1967,
-	author    = {D. Alonso},
-	title     = {Góngora y el Polifemo},
-	year      = {1967},
-	publisher = {Gredos},
-	volume = {2},
-    edition   = {5}
+@book{Aquino1959,
+    author    = {Tomás de Aquino},
+    title     = {Suma Teológica},
+    volume    = {3},
+    edition   = {2},
+    year      = {1959},
+    publisher = {Biblioteca de Autores Cristianos}
 }
 %
-@article{Fouché-Delbosc1900,
-	author  = {R. Fouché-Delbosc},
-	title   = {Note sur trois manuscrits des œuvres poétiques de Gongora},
-	journal = {Revue Hispanique},
-	volume  = {7},
-	pages   = {454--504},
-	year    = {1900}
+@book{Beltrán1991,
+    author    = {Vincenç Beltrán},
+    title     = {Coplas que hizo Jorge Manrique a la muerte de su padre: edición crítica con un estudio de su transmisión textual},
+    year      = {1991},
+    rauthor   = {Jorge Manrique},
+    role      = {Au.},
+    publisher = {Promociones y Publicaciones Universitarias},
 }
 %
-@book{Fouché-Delbosc1921,
-	author    = {R. Fouché-Delbosc},
-	title     = {Obras poéticas de d. Luis de Góngora},
-	year      = {1921},
-	publisher = {The Hispanic Society of America},
-	volume    = {2}
+@article{Beltrán2011,
+    author    = {Vincenç Beltrán},
+    title     = {Notas al cancionero Ms. Egerton 939 (LB3)},
+    journal   = {Ogni onda si rinnova: studi di ispanistica offerti a Giovanni Caravaggi},
+    volume    = {159--175},
+    year      = {2011}
 }
 %
-@article{Moll2013,
-	author    = {Moll, Jaime},
-	title     = {Notas sobre ``Las obras en verso del Homero español''},
-	publisher = {Alicante: Biblioteca Virtual Miguel de Cervantes, 2013},
-	year      = {2013},
-	url       = {https://www.cervantesvirtual.com/nd/ark:/59851/bmcm34k4}
+@book{Beltrán2013,
+    author    = {Vincenç Beltrán},
+    title     = {Jorge Manrique: Poesía},
+    year      = {2013},
+    publisher = {Biblioteca Clásica de la Real Academia Española (RAE)}
 }
 %
-@book{PellicerDeSalas1630,
-	author    = {José {Pellicer de Salas}},
-	title     = {Lecciones solemnes a las obras de don Luis de Gongora y Argote},
-	year      = {1630},
-	publisher = {Imprenta del Reino},
+@article{Beltrán2016,
+    author  = {Vincenç Beltrán},
+    title   = {Los sentidos humanos ¿conservados u olvidados?},
+    journal = {Revista de Lexicografía},
+    volume  = {22},
+    pages   = {73--92},
+    year    = {2016}
 }
 %
-@book{PérezLópez1988,
-	author    = {M. M.a {Pérez López}},
-	title     = {Pedro de Valencia, primer crítico gongorino, estudio y edición anotada de la Carta a Góngora en censura de sus poesías.},
-	year      = {1988},
-	publisher = {Acta Salamanticensia, Estudios Filológicos},
+@book{Blecua1983,
+    author    = {Alberto Blecua},
+    title     = {Manual de Crítica Textual},
+    year      = {1983},
+    publisher = {Editorial Castalia}
 }
 %
-@book{Villanova1957,
-	author    = {A. Villanova},
-	title     = {Las fuentes y los temas del Polifemo de Gongora},
-	year      = {1957},
-	publisher = {Consejo Superior de Investigaciones Científicas (CSIC)},
-	volume    = {1--2}
+@book{Covarrubias1611,
+    author      = {Sebastián de Covarrubias Orozco},
+    shortauthor = {Covarrubias},
+    title       = {Tesoro de la lengua castellana},
+    year        = {1611}
+}
+%
+@article{Conde2009,
+    author  = {J. C. Conde},
+    title   = {Conservados/olvidados: una copla de Manrique y los límites del método neolachmaniano},
+    journal = {INCIPIT},
+    volume  = {XXIX},
+    pages   = {59--84},
+    year    = {2009}
+}
+%
+@book{CorominasYPascual1980-1991,
+    author    = {J. Corominas and J. A. Pascual},
+    title     = {Diccionario crítico etimológico castellano e hispánico},
+    sigla     = {DCECH},
+    volume    = {1--6},
+    year      = {1980--1991},
+    publisher = {Gredos}
+}
+%
+@book{Foulché-Delbosc1902,
+    author    = {R. Foulché-Delbosc},
+    title     = {Jorge Manrrique: Coplas por la muerte de su padre},
+    rauthor   = {Jorge Manrique},
+    role      = {Au.},
+    year      = {1902},
+    publisher = {Protat Hermanos}
+}
+%
+@book{Foulché-Delbosc1912,
+    author    = {R. {Foulché-Delbosc}},
+    title     = {Coplas que fizo don Jorge Manrique por la muerte de su padre},
+    rauthor   = {Jorge Manrique},
+    role      = {Au.},
+    year      = {1912},
+    address   = {Madrid}
+}
+%
+@article{Gonzalez2019,
+    author  = {J. R. González},
+    title   = {La adiáfora conservados/olvidados en las Coplas de Jorge Manrique a la luz de la doctrina medieval de los diez sentidos del alma},
+    journal = {INCIPIT},
+    volume  = {XXXIX},
+    pages   = {37--63},
+    year    = {2019}
+}
+%
+@online{GrupdHistoria,
+    author    = {{Grupd'historia i contacte de llengües}},
+    title     = {Diccionari del castellà del segle XV a la Corona d' Aragó},
+    sigla      = {DICCA-XV},
+    publisher = {Universitat de Barcelona},
+    url       = {http://ghcl.ub.edu/diccaxv/}
+}
+%
+@article{Lida1947,
+    author  = {M. R. Lida},
+    title   = {Civil 'Cruel'},
+    journal = {Nueva Revista de Filología Hispánica},
+    volume  = {1},
+    number  = {1},
+    pages   = {80--85},
+    year    = {1947}
+}
+%
+@book{Maas1958,
+    author     = {P. Maas},
+    title      = {Textual Criticism},
+    year       = {1958},
+    casual = {Barbara Flower},
+    role = {Tr.},
+    publisher  = {Clarendon Press}
+}
+%
+@book{Mena2009,
+    author    = {Maximiliaan P. A. M. Kerkhof},
+    title     = {La coronación},
+    rauthor   = {Juan de Mena},
+    role      = {Au.},
+    year      = {2009},
+    publisher = {Consejo Superior de Investigaciones Científicas (CSIC)}
+}
+%
+@book{MenendezYPelayo1944,
+    author    = {R. {Menéndez y Pelayo}},
+    title     = {Antología de poetas líricos castellanos. La poesía en la Edad Media},
+    volume    = {1},
+    note      = {t. 2},
+    year      = {1944},
+    publisher = {Consejo Superior de Investigaciones Científicas (CSIC)},
+    url       = {https://www.cervantesvirtual.com/nd/ark:/59851/bmc2v2z6}
+}
+%
+@article{Navarro1961,
+    author  = {T. Navarro},
+    title   = {Métrica de las Coplas de Jorge Manrique},
+    journal = {Nueva Revista de Filología Hispánica},
+    volume  = {15},
+    number  = {1/2},
+    pages   = {169--179},
+    year    = {1961},
+    url     = {http://www.jstor.org/stable/40297520}
+}
+%
+@article{Orduna1967,
+    author  = {G. Orduna},
+    title   = {Las Coplas de Jorge Manrique y el triunfo sobre la muerte: estructura e intencionalidad},
+    journal = {Romanische Forschungen},
+    volume  = {79},
+    number  = {1/2},
+    pages   = {139--151},
+    year    = {1967}
+}
+%
+@book{Orduna2005,
+    author    = {G. Orduna},
+    title     = {Fundamentos de Crítica Textual},
+    casual   = {Leonardo Funes and José Manuel Lucía Megías},
+    role      = {Ed.},
+    year      = {2005},
+    publisher = {Editorial Arco/Libros}
+}
+%
+@article{Palumbo1983,
+    author  = {P. Palumbo},
+    title   = {L'ordine delle strofe nelle Coplas por la muerte de su padre di Jorge Manrique},
+    journal = {Medioevo Romanzo},
+    volume  = {VIII},
+    pages   = {193--215},
+    year    = {1983}
+}
+%
+@article{PérezPriego2017,
+    author  = {M. Á. {Pérez Priego}},
+    title   = {Para la edición de las Coplas de Jorge Manrique: stemma y selección de variantes},
+    journal = {Revista de Filología Española},
+    volume  = {97},
+    pages   = {91--111},
+    year    = {2017}
+}
+%
+@book{PérezPriego1990,
+    author    = {M. Á. {Pérez Priego}},
+    title     = {Jorge Manrique: Poesías Completas},
+    year      = {1990},
+    publisher = {Espasa Calpe},
+    address   = {Madrid},
+    series    = {Colección Austral}
+}
+%
+@book{PérezPriego2011,
+    author    = {M. Á. {Pérez Priego}},
+    title     = {La edición de textos},
+    edition   = {2},
+    year      = {2011},
+    publisher = {Editorial Síntesis}
+}
+%
+@book{Pulgar1943,
+    author    = {Carriazo, J. M.},
+    title     = {Crónica de los reyes Católicos},
+    rauthor   = {Fernando del Pulgar},
+    role      = {Au.},
+    year      = {1943},
+    publisher = {Espasa Calpe},
+    address   = {Madrid},
+    volume    = {1--2}
+}
+%
+@book{Pulgar1971,
+    author    = {Tate, R. Brian},
+    title     = {Claros varones de Castilla},
+    rauthor   = {Fernando del Pulgar},
+    role      = {Au.},
+    year      = {1971},
+    publisher = {Clarendon Press}
+}
+%
+@article{Quilis2009,
+    author  = {M.a J. Quilis},
+    title   = {Estudio metrico-lingüístico de las Coplas a la muerte de su padre de Jorge Manrique},
+    journal = {Rythmica},
+    volume  = {7},
+    pages = {55--94},
+    year    = {2009}
+}
+%
+@book{RAE1726,
+    author    = {{Real Academia Española}},
+    title     = {Diccionario de autoridades},
+    year      = {1726--1739},
+    sigla      = {Autoridades},
+    publisher   = {Imprenta de Francisco del Hierro}
+}
+%
+@book{Severin1990,
+    author    = {Dorothy Sherman Severin},
+    title     = {El Cancionero de Oñate-Castañeda},
+    year      = {1990},
+    publisher = {The Hispanic Seminary of Medieval Studies},
+    address   = {Madison}
+}
+%
+@book{Severin2000,
+    author    = {Dorothy Sherman Severin},
+    title     = {Two Spanish Songbooks: The Cancionero Capitular de la Colombina (SV2) and the Cancionero de Egerton (LB3)},
+    year      = {2000},
+    publisher = {Liverpool University Press}
+}
+%
+@article{Senabre1983,
+    author  = {R. Senabre},
+    title   = {La primera edición de las Coplas de Jorge Manrique},
+    journal = {Serta Philologia F. Lázaro Carreter},
+    volume  = {2},
+    pages   = {509--517},
+    year    = {1983}
 }
